--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div class="menu" id="menu">
         <button class="exit-btn" id="exitBtn">Close</button>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="Photo_Gallery.html">Photo Gallery</a></li>
             <li><a href="myself.html">About myself</a></li>
             <li><a href="Education.html">Education</a></li>
