--- a/Comment.html
+++ b/Comment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Comments</title>
-	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
+	<link rel="stylesheet" href="css/mystyle.css">
 </head>
     <header>
         <button id="menuBtn">Menu</button>
